--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "md5": "^2.3.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
   }
